[package]
name = "tracker-firmware"
version = "0.1.0"
edition = "2021"
default-run = "tracker-firmware"

[[bin]]
name = "color-eval"
path = "bin/color_eval/main.rs"

[[bin]]
name = "spiral"
path = "bin/spiral.rs"

[[bin]]
name = "smile"
path = "bin/smile.rs"

[[bin]]
name = "imu"
path = "bin/imu.rs"

[[bin]]
name = "read_line"
path = "bin/read_line.rs"

[[bin]]
name = "read_nmea"
path = "bin/read_nmea.rs"

[[bin]]
name = "ublox_m8"
path = "bin/ublox_m8.rs"

[[bin]]
name = "i2c_scan"
path = "bin/i2c_scan.rs"

[features]
default = ["sk6812"]
sk6812 = []

[dependencies]
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"

embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
    "rp2040",
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }

panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
smart-leds = "0.4.0"
tracker-mapper = { path = "../tracker-mapper" }
lines-codec = { path = "../lines-codec" }

bno080 = { path = "../../bno080" }
ublox-core = { path = "../../ublox-core", features = ["defmt-03"] }

num-quaternion = { version = "1.0.2", default-features = false, features = [
    "libm",
] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
embedded-hal-async = "1.0.0"
thiserror = { version = "2.0.3", default-features = false }
rand_core = "0.6.4"
static_cell = "2.1.0"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
embedded-io = "0.6.1"
tiny-nmea = { version = "0.1.0", path = "../../rust-monorepo/tiny-nmea", features = [
    "defmt-03",
] }
embassy-sync = "0.6.1"
embassy-futures = "0.1.1"
